// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes class when hovered 1`] = `
.c0 {
  color: inherit;
}

<a
  className="c0"
  href="mailto:michal.cesarczyk@gmail.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Link changes class when hovered 2`] = `
.c0 {
  color: inherit;
  color: crimson;
  border-bottom: 1px solid currentColor;
  padding-bottom: 4px;
}

<a
  className="c0"
  href="mailto:michal.cesarczyk@gmail.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Link changes class when hovered 3`] = `
.c0 {
  color: inherit;
}

<a
  className="c0"
  href="mailto:michal.cesarczyk@gmail.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;
